# sekaictf-2022

./: 404.html  CNAME  LICENSE.content.md  README.md  index.html
challenges/: index.html
crypto/: README.md
forensics/: README.md
misc/: README.md  console-port
ppc/: README.md
pwn/: README.md
pwn/gft/solution/: Cargo.toml  exploit.py
pwn/gft/solution/src/: lib.rs
reverse/: README.md
rules/: index.html
scoreboard/: index.html
teams/: 404.html  index.html
teams_page_1/: index.html
teams_page_10/: index.html
teams_page_11/: index.html
teams_page_12/: index.html
teams_page_13/: index.html
teams_page_14/: index.html
teams_page_15/: index.html
teams_page_16/: index.html
teams_page_17/: index.html
teams_page_18/: index.html
teams_page_19/: index.html
teams_page_2/: index.html
teams_page_20/: index.html
teams_page_21/: index.html
teams_page_22/: index.html
teams_page_23/: index.html
teams_page_24/: index.html
teams_page_25/: index.html
teams_page_26/: index.html
teams_page_27/: index.html
teams_page_28/: index.html
teams_page_29/: index.html
teams_page_3/: index.html
teams_page_30/: index.html
teams_page_31/: index.html
teams_page_32/: index.html
teams_page_33/: index.html
teams_page_34/: index.html
teams_page_35/: index.html
teams_page_4/: index.html
teams_page_5/: index.html
teams_page_6/: index.html
teams_page_7/: index.html
teams_page_8/: index.html
teams_page_9/: index.html
users/: 404.html  index.html
users_page_1/: index.html
users_page_10/: index.html
web/: README.md
(+7103 files in other folders)
